--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -224,11 +224,11 @@ option(SC_SYMLINK_CLASSLIB "Place a symlink of SCCLassLibrary instead of copying
 option(SYSTEM_ABLETON_LINK "Use link from system" OFF)
 option(SYSTEM_BOOST   "Use boost libraries from system" OFF)
 option(SYSTEM_YAMLCPP "Use yaml-cpp library from system" OFF)
-option(BUILD_PORTAUDIO "Build bundled PortAudio library" OFF)
+option(SYSTEM_PORTAUDIO "Use PortAudio libraries from system" ON)
 if(WIN32)
-    set(BUILD_PORTAUDIO ON)
+    set(SYSTEM_PORTAUDIO OFF)
 else()
-    mark_as_advanced(BUILD_PORTAUDIO)
+    mark_as_advanced(SYSTEM_PORTAUDIO)
 endif()
 
 option(FORTIFY "Define -D_FORTIFY_SOURCE=2 to check for programming errors" OFF)
