--- a/external_libraries/CMakeLists.txt
+++ b/external_libraries/CMakeLists.txt
@@ -6,9 +6,9 @@ if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/nova-simd/vec.hpp)
 			" https://github.com/supercollider/supercollider/wiki/git-cheat-sheet#working-with-submodules")
 endif()
 
-if(BUILD_PORTAUDIO)
-  message(STATUS "PortAudio: building static library")
-  add_subdirectory("${CMAKE_SOURCE_DIR}/external_libraries/portaudio")
+if(NOT SYSTEM_PORTAUDIO)
+    message(STATUS "PortAudio: building static library")
+    add_subdirectory("${CMAKE_SOURCE_DIR}/external_libraries/portaudio")
 endif()
 
 if(NOT SYSTEM_BOOST) # we compile boost ourselves
