gha: create link to Applications in dmg

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -311,7 +311,10 @@ jobs:
         run: cmake --build $BUILD_PATH --config Release --target install
       - name: create archive
         if: matrix.artifact-suffix
-        run: cd $INSTALL_PATH && hdiutil create -srcfolder SuperCollider -format UDBZ $ARTIFACT_FILE # this assumes that we end up with the build in the folder SuperCollider
+        run: |
+          cd $INSTALL_PATH
+          ln -s /Applications SuperCollider/Applications
+          hdiutil create -srcfolder SuperCollider -format UDBZ $ARTIFACT_FILE # this assumes that we end up with the build in the folder SuperCollider
       - name: upload artifacts
         uses: actions/upload-artifact@v2
         if: matrix.artifact-suffix
