--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -290,7 +290,10 @@ jobs:
         run: |
           cd $INSTALL_PATH
           ln -s /Applications SuperCollider/Applications
-          hdiutil create -srcfolder SuperCollider -format UDBZ $ARTIFACT_FILE # this assumes that we end up with the build in the folder SuperCollider
+           # the following assumes that we end up with the build in the folder SuperCollider
+           # hdiutil sometimes fails with "create failed - Resource busy"
+           # when that happens, we run it again
+          hdiutil create -srcfolder SuperCollider -format UDBZ $ARTIFACT_FILE || hdiutil create -srcfolder SuperCollider -format UDBZ $ARTIFACT_FILE
       - name: upload artifacts
         uses: actions/upload-artifact@v2
         if: matrix.artifact-suffix
