gha: fix creation of windows installers

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -468,14 +468,14 @@ jobs:
           path: ${{ env.INSTALL_PATH }}/${{ env.ARTIFACT_FILE }}.zip
           retention-days: 7 # quickly remove test artifacts
       - name: create installer
-        if: matrix.create-installer == 'true'
+        if: matrix.create-installer == true
         shell: bash
         run: |
           export PATH="C:\Program Files (x86)\NSIS":$PATH
           cmake --build $BUILD_PATH --config Release --target installer
       - name: upload installer
         uses: actions/upload-artifact@v2
-        if: matrix.create-installer == 'true'
+        if: matrix.create-installer == true
         with:
           name: ${{ env.INSTALLER_FILE }}
           path: ${{ env.INSTALL_PATH }}/*.exe
